2001-05-09  Christoph Pfisterer  <cp@chrisp.de>

	* fink-release: Bumped to 0.2.1.

2001-05-01  Christoph Pfisterer  <cp@chrisp.de>

	* init.csh.in: Fixed interpolation of MANPATH.

2001-04-29  Christoph Pfisterer  <cp@chrisp.de>

	* init.sh.in, init.csh.in: Removed /usr/man and /usr/info. Added
	/usr/X11R6/bin and /usr/X11R6/man to the respective variables.

2001-04-14  Christoph Pfisterer  <cp@chrisp.de>

	* init.sh.in, init.csh.in: Also add <prefix>/share/man and
	<prefix>/share/info to the path variables.

2001-04-05  Christoph Pfisterer  <cp@chrisp.de>

	* init.sh.in, init.csh.in: Moved to the base-files directory.
	* setup.sh, install.sh: Scripts to install the init.[c]sh scripts
	as a package.
	* fink-release: Marker file to be put in <prefix>/etc.
