@@ -1,3 +1,9 @@
+2001-06-16  Christoph Pfisterer  <cp@chrisp.de>
+
+	* init.sh.in, init.csh.in: Additionally read per-package scripts
+	from <prefix>/etc/profile.d.
+	* install.sh: Create etc/profile.d.
+
 2001-05-09  Christoph Pfisterer  <cp@chrisp.de>
 
 	* fink-release: Bumped to 0.2.1.
